# crusty-requests

./: .gitignore  Cargo.toml  README.md  pyproject.toml
examples/: main.py
src/: lib.rs  request.rs  response.rs
