[package]
name = "crusty-requests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "crusty_requests"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.18.3"
serde = "1.0.162"
pythonize = "0.18.0"
serde_json = "1.0.96"
tokio = { version = "1.28.0", features = ["full"] }
isahc = { version = "1.7.2", features = ["json", "serde_json"] }
pyo3-asyncio = { version = "0.18.0", features = ["tokio-runtime"] }
